[gd_scene load_steps=5 format=3 uid="uid://ckqvejbgtxuhp"]

[ext_resource type="Script" path="res://ui/battlemap/player/player_stats/player_stats_ui.gd" id="1_h542a"]
[ext_resource type="Theme" uid="uid://dmot8ul1c5l3n" path="res://assets/themes/theme_1.tres" id="2_nitqb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cs2ih"]
bg_color = Color(0.00318958, 0.00157763, 4.2161e-05, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gdji6"]
color = Color(0.960784, 0, 0, 1)
thickness = 23

[node name="PlayerStatsUI" type="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_h542a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerHealthLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 100"

[node name="PlayerStaminaLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stamina: 50"

[node name="EndTurnButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_nitqb")
text = "End Turn"

[node name="MonsterHP" type="ProgressBar" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_cs2ih")
theme_override_styles/fill = SubResource("StyleBoxLine_gdji6")
max_value = 1.0
value = 1.0

[connection signal="pressed" from="MarginContainer/HBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
